# excel_to_act

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/plans/: phase1_excel_decomposition_plan.md  pr_plan_phase1.md
examples/: README.md
schemas/: README.md  confirmation_template.schema.json  formula_graph.schema.json  module_classification.schema.json  run_metadata.schema.json  workbook_inventory.schema.json  workbook_manifest.schema.json
src/excel_to_act/: __init__.py
src/excel_to_act/classify/: README.md  __init__.py  classifier.py  rules.py
src/excel_to_act/confirm/: README.md  __init__.py  templates.py
src/excel_to_act/graph/: README.md  __init__.py  builder.py
src/excel_to_act/ingest/: README.md  __init__.py  ooxml_package.py  openpyxl_reader.py
src/excel_to_act/interfaces/: README.md  __init__.py  cli.py
src/excel_to_act/inventory/: README.md  __init__.py  extractor.py
src/excel_to_act/orchestrator/: README.md  __init__.py  phase1.py
src/excel_to_act/plugins/: README.md  __init__.py  contracts.py  registry.py
src/excel_to_act/report/: README.md  __init__.py
src/excel_to_act/schemas/: README.md  __init__.py  artifacts.py
src/excel_to_act/store/: README.md  __init__.py  local_store.py
tests/: README.md  test_cli.py  test_phase1_backend.py
