[project]
name = "excel-to-act"
version = "0.1.0"
description = "Phase 1 Excel decomposition framework for actuarial model migration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openpyxl>=3.1",
  "pydantic>=2",
  "networkx>=3",
  "typer>=0.12",
  "jinja2>=3",
]

[project.optional-dependencies]
formula = [
  "formulas>=1.3",
  "xlcalculator>=0.5",
]
report = [
  "xlsxwriter>=3",
]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1",
]

[project.scripts]
excel-to-act = "excel_to_act.interfaces.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
